# pelicanone-app

./: .env.example  .gitignore  Makefile  README.md  alembic.ini
alembic/versions/: 0a537a709489_add_user_profile_and_balance.py  2f54f5a8c2d1_update_job_statuses_and_error.py  3c0a2d1c8b57_rename_credit_ledger.py  7d1f3d4a3a2b_add_missing_job_columns.py  9b8e2c2b3caa_add_job_result_files.py  bdd7ae07ef89_init_schema.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240930_0001_baseline.py  20241005_0002_align_schema.py  20241109_0003_add_uploads.py
backend/app/: db.py  main.py
backend/app/api/v1/: deps.py
backend/app/api/v1/routes/: __init__.py  admin.py  auth.py  billing.py  credits.py  files.py  health.py  jobs.py  presets.py
backend/app/auth/: telegram.py  tokens.py  vk.py
backend/app/cli/: credits.py
backend/app/core/: job_files.py  media.py  presets.py  settings.py
backend/app/core/models/: __init__.py  credit_ledger.py  credit_tx.py  job.py  upload.py  user.py
backend/app/core/repositories/: credits.py  jobs.py  users.py
backend/app/core/schemas/: __init__.py  auth.py  billing.py  credits.py  job.py  presets.py
backend/app/core/services/: jobs.py
backend/app/providers/genapi/: client.py  errors.py  extractor.py
backend/app/workers/: rq.py  tasks.py
backend/tests/: conftest.py  test_health.py  test_jobs.py  test_polling_settings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
infra/: README.md  docker-compose.yml
infra/caddy/: Caddyfile
(+27 files in other folders)
